// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Switch__wrapper"
>
  <input
    class="Switch"
    id="testCheckbox"
    type="checkbox"
  />
  <label
    class="FormLabel Switch__label"
    data-test-id="cf-ui-form-label"
    for="testCheckbox"
  >
    foobar
  </label>
</div>
`;

exports[`renders the component as checked 1`] = `
<div
  class="Switch__wrapper"
>
  <input
    checked=""
    class="Switch Switch--checked"
    id="testCheckbox"
    type="checkbox"
  />
  <label
    class="FormLabel Switch__label"
    data-test-id="cf-ui-form-label"
    for="testCheckbox"
  >
    foobar
  </label>
</div>
`;

exports[`renders the component as disabled 1`] = `
<div
  class="Switch__wrapper"
>
  <input
    class="Switch Switch--disabled"
    disabled=""
    id="testCheckbox"
    type="checkbox"
  />
  <label
    class="FormLabel Switch__label Switch__label--disabled"
    data-test-id="cf-ui-form-label"
    for="testCheckbox"
  >
    foobar
  </label>
</div>
`;

exports[`renders the component as disabled and checked 1`] = `
<div
  class="Switch__wrapper"
>
  <input
    checked=""
    class="Switch Switch--checked Switch--disabled"
    disabled=""
    id="testCheckbox"
    type="checkbox"
  />
  <label
    class="FormLabel Switch__label Switch__label--disabled"
    data-test-id="cf-ui-form-label"
    for="testCheckbox"
  >
    foobar
  </label>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Switch__wrapper my-extra-class"
>
  <input
    class="Switch"
    id="testCheckbox"
    type="checkbox"
  />
  <label
    class="FormLabel Switch__label"
    data-test-id="cf-ui-form-label"
    for="testCheckbox"
  >
    foobar
  </label>
</div>
`;
